--- a/static_node_and_express_site-v1/package.json
+++ b/static_node_and_express_site-v1/package.json
@@ -2,7 +2,7 @@
   "name": "static_node_and_express_site-v1",
   "version": "0.0.1",
   "description": "A Static Node.js and Express based website",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
