--- a/static_node_and_express_site-v1/package.json
+++ b/static_node_and_express_site-v1/package.json
@@ -4,7 +4,8 @@
   "description": "A Static Node.js and Express based website",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "John Layher",
   "license": "ISC",
